# trtlite

./: .gitignore  .gitmodules  README.md  pyproject.toml
docs/: net_framework.md  support_ops.md
plugins/: README.md  build.sh
plugins/src/: CMakeLists.txt
plugins/src/plugin/: CMakeLists.txt
plugins/src/plugin/api/: inferPlugin.cpp
plugins/src/plugin/common/kernels/: transformerKernels.cu
plugins/src/plugin/transformerDecoderPlugin/: transformer_decode.cu  transformer_decode.h
plugins/src/plugin/transformerEncoderPlugin/: transformer_encode.cu  transformer_encode.h
plugins/src/samples/core/: fileops.hpp  networkContext.cpp  networkContext.h  sampleTrtLayers.h
samples/resnet/: model_trt.py
samples/simple/: simple.py
samples/vision_transformer/: README.md  model_pt.py  model_trt.py
trtlite/: __init__.py  version.py
trtlite/nn/: __init__.py  functional.py
trtlite/nn/modules/: calibrator.py  common.py  container.py  context.py  module.py  ops.py  ops_.py
trtlite/plugins/: common.py  layers.py
trtlite/utils/: cpp_extension.py  file_baton.py  gen_wts.py  hooks.py  lazy_import.py  registry.py
